--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif8266
 board = d1
 framework = arduino
 lib_deps = 
-	tzapu/WiFiManager@^0.16.0
 	datacute/DoubleResetDetector@^1.0.3
+	tzapu/WiFiManager@^0.16.0
+	knolleary/PubSubClient@^2.8
